test/error/missing_class.sv
// pattern: could not find class "C"
module top;
    initial $display(C#()::X);
endmodule
